--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	background-image: url("../src/assets/splashBG.svg");
+	height:100vh;
+	background-repeat:no-repeat;
+    background-position:center center;
+	margin: 0 auto
 }
 
 code {
