--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,13 @@ body {
 		sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	background-image: url("../src/assets/splashBG.svg");
+	background-image: url("./assets/Mask Group 139.svg");
+
 	height:100vh;
 	background-repeat:no-repeat;
     background-position:center center;
-	margin: 0 auto
+	margin: 5px auto;
+	margin-bottom: 10px;
 }
 
 code {
