--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,14 @@
 }
 .App {
 	overflow: hidden;
+	text-align: center;
+}
+
+.css-1jejqrs-MuiTabs-indicator {
+	height: 4px !important;
+	border-radius: 2rem;
+	width: 103px !important;
+}
+.css-1069odk-MuiButtonBase-root-MuiTab-root {
+	padding: 12px 8px !important;
 }
